--- a/style.css
+++ b/style.css
@@ -1,26 +1,28 @@
 body {
     font-family: Georgia, 'Times New Roman', Times, serif;
-    background-color: yellowgreen;
-    
+    background-image: url('https://media.istockphoto.com/id/1492377092/photo/magnifier-with-brainstorm-inside-to-smart-idea-creative-thinking-education-innovation-smart.webp?b=1&s=612x612&w=0&k=20&c=cJAq2HkRKiqalxq578WINmBZ62JlYw2YmKaU3FKsQBY=');
+    background-size: cover;
+    background-position:center;
+
 }
 h1 {
     text-align: center;
     font-weight: bold;
-    color:blueviolet  
+    color:blueviolet;
+    text-shadow: 3px 3px 2px cornflowerblue;
 }
 p {
     text-align: center;
 }
 #question-text {
     text-align: center;
-    color: blueviolet;
+    color: rgb(208, 66, 151);
     margin: 0 auto;
     padding: 20px 10px 20px 20px;
-    font-size: 40px;
+    font-size: 30px;
 }
 #challenge-container {
     padding: 10px;
-
 }
 #quiz-answers {
     display: flex;
@@ -33,14 +35,15 @@ p {
     display: flex;
     justify-content: space-around;
     padding: 30px;
-    color: blue;
+    color: rgb(13, 0, 12);
     box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5);
 } 
 #navigation-control {
     display:flex;
     justify-content: space-evenly;
     margin: 20px;
-    padding: 60px;
+    padding: 60px
+    
 }  
 #player-score h2 {
     display: flex;
@@ -62,11 +65,15 @@ p {
 }
 .directions {
     color: purple;
+    font-style: italic;
+    font-size:medium;
+   
 }
 .how-to-play {
     color: red;
     font-weight:bold;
     font-size: 20px;
+    
 }
 #feedback-message {
     display: none;
@@ -74,6 +81,19 @@ p {
 .score-container {
     display:flex;
     justify-content: flex-end;
+}
+.quiz-button {
+    color: rgb(30, 30, 120);
+    border-radius: 0cqmin;
+    box-shadow: blueviolet;
+}
+#next-button {
+    border-color: blue;
+    border-radius: 0cqmin;
+    
+}
+#submit-button {
+    border-color: rgb(210, 99, 140)
 }
     
 
