--- a/style.css
+++ b/style.css
@@ -1,48 +1,59 @@
 body {
     font-family: Georgia, 'Times New Roman', Times, serif;
-    background-image: url('https://media.istockphoto.com/id/1492377092/photo/magnifier-with-brainstorm-inside-to-smart-idea-creative-thinking-education-innovation-smart.webp?b=1&s=612x612&w=0&k=20&c=cJAq2HkRKiqalxq578WINmBZ62JlYw2YmKaU3FKsQBY=');
+    background-image: url('https://media.istockphoto.com/id/1248190953/vector/neon-quiz-sign-vector-design-template-quiz-neon-frame-light-banner-design-element-colorful.jpg?s=612x612&w=0&k=20&c=9QmUd10Aoqk0cko6grsZmUiUkq-oV1kg-snmI8AfyF0=');
     background-size: cover;
     background-position:center;
 
 }
+@keyframes blink {
+    0% {opacity: 1;}
+    50% {opacity: 0;}
+    100 {opacity: 1;}
+}
 h1 {
     text-align: center;
     font-weight: bold;
-    color:blueviolet;
-    text-shadow: 3px 3px 2px cornflowerblue;
+    color:rgb(189, 185, 201);
+    text-shadow: 3px 3px 2px rgb(165, 134, 160);
+    animation: blink 2s infinite;
 }
 p {
+    padding-top: 10px;
     text-align: center;
+    
 }
 #question-text {
     text-align: center;
-    color: rgb(208, 66, 151);
+    color: rgb(242, 234, 234);
     margin: 0 auto;
     padding: 20px 10px 20px 20px;
-    font-size: 30px;
+    font-size: 50px;
 }
 #challenge-container {
-    padding: 10px;
+    padding: 80px;
 }
 #quiz-answers {
     display: flex;
     justify-content: space-between;
     flex-direction:column;
     align-items: center;
-    margin: 20px;
+    font-weight: bold;
+    font-size: 80px;
 }
 #answer-choices {
     display: flex;
     justify-content: space-around;
     padding: 30px;
-    color: rgb(13, 0, 12);
-    box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5);
+    color: rgb(237, 10, 241);
+    box-shadow: inset 0 0 50px rgba(227, 216, 16, 0.5);
+    font-size: 30px;
+    font-weight: bold;
 } 
 #navigation-control {
     display:flex;
     justify-content: space-evenly;
     margin: 20px;
-    padding: 60px
+    padding: 5px
     
 }  
 #player-score h2 {
@@ -61,23 +72,25 @@ p {
     border: 2px solid #000;
     text-align: right;
     align-content: flex-start;
-    color: blue;
+    color: rgb(152, 59, 129);
 }
 .directions {
-    color: purple;
+    color: rgb(237, 249, 6);
     font-style: italic;
-    font-size:medium;
-   
+    font-size: 20px;    
 }
 .how-to-play {
-    color: red;
+    color: rgb(247, 245, 245);
     font-weight:bold;
-    font-size: 20px;
-    
+    font-size: 20px;  
+    text-decoration: underline;
 }
-#feedback-message {
-    display: none;
-}
+ #feedback-message {
+    display: flex;  
+    justify-content: center; 
+    font-weight: bold;
+    font-size: 30px;
+} 
 .score-container {
     display:flex;
     justify-content: flex-end;
@@ -89,12 +102,24 @@ p {
 }
 #next-button {
     border-color: blue;
-    border-radius: 0cqmin;
+    font-size: 20px;
+    color: blue;
+    font-weight: bold;
     
 }
 #submit-button {
-    border-color: rgb(210, 99, 140)
+    border-color: blue;
+    font-size: 20px; 
+    color: rgb(180, 29, 180);
+    font-weight: bold;
 }
+#restart {
+    border-color: blue;
+    font-size: 20px; 
+    color: rgb(104, 10, 10);
+    font-weight: bold;
+}
+
     
 
 
