--- a/style.css
+++ b/style.css
@@ -2,26 +2,38 @@ body {
     font-family: Georgia, 'Times New Roman', Times, serif;
     background-image: url('https://media.istockphoto.com/id/1248190953/vector/neon-quiz-sign-vector-design-template-quiz-neon-frame-light-banner-design-element-colorful.jpg?s=612x612&w=0&k=20&c=9QmUd10Aoqk0cko6grsZmUiUkq-oV1kg-snmI8AfyF0=');
     background-size: cover;
-    background-position:center;
+    background-position: center;
 
 }
+
 @keyframes blink {
-    0% {opacity: 1;}
-    50% {opacity: 0;}
-    100 {opacity: 1;}
+    0% {
+        opacity: 1;
+    }
+
+    50% {
+        opacity: 0;
+    }
+
+    100 {
+        opacity: 1;
+    }
 }
+
 h1 {
     text-align: center;
     font-weight: bold;
-    color:rgb(189, 185, 201);
+    color: rgb(189, 185, 201);
     text-shadow: 3px 3px 2px rgb(165, 134, 160);
     animation: blink 2s infinite;
 }
+
 p {
     padding-top: 10px;
     text-align: center;
-    
+
 }
+
 #question-text {
     text-align: center;
     color: rgb(242, 234, 234);
@@ -29,17 +41,24 @@ p {
     padding: 20px 10px 20px 20px;
     font-size: 50px;
 }
+
 #challenge-container {
     padding: 80px;
+    color: rgb(232, 99, 201);
+    font-size: 70px;
+    text-align: center;
+
 }
+
 #quiz-answers {
     display: flex;
     justify-content: space-between;
-    flex-direction:column;
+    flex-direction: column;
     align-items: center;
     font-weight: bold;
     font-size: 80px;
 }
+
 #answer-choices {
     display: flex;
     justify-content: space-around;
@@ -48,24 +67,32 @@ p {
     box-shadow: inset 0 0 50px rgba(227, 216, 16, 0.5);
     font-size: 30px;
     font-weight: bold;
-} 
+}
+
+.quiz-button {
+    font-size: 20px;
+    background-color: rgb(125, 153, 246);
+}
+
 #navigation-control {
-    display:flex;
+    display: flex;
     justify-content: space-evenly;
     margin: 20px;
     padding: 5px
-    
-}  
+}
+
 #player-score h2 {
     display: flex;
     justify-content: flex-end;
     float: left;
     margin-right: 20px;
-    
+
 }
+
 #score-value {
     font-weight: bold;
 }
+
 #player-score {
     display: flex;
     justify-content: flex-end;
@@ -74,60 +101,82 @@ p {
     align-content: flex-start;
     color: rgb(152, 59, 129);
 }
+
 .directions {
     color: rgb(237, 249, 6);
     font-style: italic;
-    font-size: 20px;    
+    font-size: 20px;
 }
+
 .how-to-play {
     color: rgb(247, 245, 245);
-    font-weight:bold;
-    font-size: 20px;  
+    font-weight: bold;
+    font-size: 20px;
     text-decoration: underline;
 }
- #feedback-message {
-    display: flex;  
-    justify-content: center; 
+
+#feedback-message {
+    display: flex;
+    justify-content: center;
     font-weight: bold;
     font-size: 30px;
-} 
+}
+
 .score-container {
-    display:flex;
+    display: flex;
     justify-content: flex-end;
 }
+
 .quiz-button {
     color: rgb(30, 30, 120);
     border-radius: 0cqmin;
     box-shadow: blueviolet;
 }
+
 #next-button {
     border-color: blue;
     font-size: 20px;
     color: blue;
     font-weight: bold;
-    
+
 }
+
 #submit-button {
     border-color: blue;
-    font-size: 20px; 
+    font-size: 20px;
     color: rgb(180, 29, 180);
     font-weight: bold;
 }
+
 #restart {
     border-color: blue;
-    font-size: 20px; 
+    font-size: 20px;
     color: rgb(104, 10, 10);
     font-weight: bold;
 }
+
 .displayNone {
     display: none;
 }
+
 .displayBlock {
     display: block;
 }
 
+#mute-button {
+    border-color: blue;
+    font-size: 20px;
+    color: rgb(180, 29, 29);
+    font-weight: bold;
+}
+.rules {
     
-
-
-    
-
+    position: fixed;
+    top: -100px;
+    left: 50%;
+    transform: translateX(-50%);
+    color: red;
+    padding: 20px;
+    transition: top 0.5s ease;
+    border-radius: 5px;   
+}
